crates/toml/tests/snapshots/invalid/key/open-bracket.stderr
TOML parse error at line 1, column 5
  |
1 | [abc = 1
  |     ^
unclosed table, expected `]`
